--- a/Maximo_comun_multiplo.ipynb
+++ b/Maximo_comun_multiplo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNOHzXdctHGSZu4uk0tVIyA",
+      "authorship_tag": "ABX9TyMd63XjQ7xE7pdT0C9CSygI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,22 +28,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "GQcUnfTFDz-t",
-        "outputId": "65b60f46-8b90-4576-d293-3a8fb91a4a4a"
+        "outputId": "3a9e559d-34b7-4b1d-ca32-3e5b68a8cc67",
+        "id": "Uf0GHJDWxa4O"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "ingrese el primer numero:9\n",
+            "ingrese el primer numero:1809\n",
             "ingrese el segundo numero:3\n",
-            "El MCM es: 9\n"
+            "el MCM es : 1809\n"
           ]
         }
       ],
@@ -58,12 +58,9 @@
         "def mcm(x, y):\n",
         "  return abs(x * y) // gcd(x, y)\n",
         "\n",
-        "  num1 = int(input(\"ingrese el primer numero:\"))\n",
-        "  num2 = int(input(\"ingrese el segundo numero:\"))\n",
-        "  print(\"El MCM es:\", mcm(num1, num2))\n",
         "num1 = int(input(\"ingrese el primer numero:\"))\n",
         "num2 = int(input(\"ingrese el segundo numero:\"))\n",
-        "print(\"El MCM es:\", mcm(num1, num2))"
+        "print(\"el MCM es :\", mcm(num1, num2))"
       ]
     }
   ]
